--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="30">
-<title></title>
+<title>秀</title>
+  <style type="text/css">
+    body{background:#ff0000 url(img/0.jpg);}
+  </style>
 </head>
 <body>
 
-<h1></h1>
+<h1>我美吗?</h1>
 <p></p>
 
 </body>
