--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="refresh" content="30">
 <title>秀</title>
   <style type="text/css">
-    body{background:#ff0000 url(img/0.jpg);}
+    body{background:#ff0000 url(img src="0.jpg");}
   </style>
 </head>
 <body>
