--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta http-equiv="refresh" content="30">
 <title>秀</title>
   <style type="text/css">
-    body{background:#ff0000 url(img src="0.jpg");}
+    body{background:#ff0000 url<img src="0.jpg">;}
   </style>
 </head>
 <body>
 
-<h1>我美吗1?</h1>
+<h1>我美吗12?</h1>
 <p></p>
 
 </body>
